--- a/view/static-page.html
+++ b/view/static-page.html
@@ -52,18 +52,19 @@
     <!-- Custom styles for this template -->
     </head>
     <body
-        <div>
-          <?php
-            include 'view/components/navigation.php';
-          ?>
-        </div>
-        
-
         <main role="main" class="container">
 
           <div class="starter-template">
-            <h1>Bootstrap starter template</h1>
-            <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+            <h1>
+                <?php
+                    echo $title;
+                ?>
+            </h1>
+            <p class="lead">
+                <?php
+                    echo $content;
+                ?>
+            </p>
           </div>
 
         </main><!-- /.container -->
